logs/dag_id=dag_extract/run_id=manual__2024-05-28T190734.242865+0000/task_id=transform_sales_orders_task/attempt=1.log
[2024-05-28T19:07:36.148+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_extract.transform_sales_orders_task manual__2024-05-28T19:07:34.242865+00:00 [queued]>
[2024-05-28T19:07:36.158+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_extract.transform_sales_orders_task manual__2024-05-28T19:07:34.242865+00:00 [queued]>
[2024-05-28T19:07:36.159+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2024-05-28T19:07:36.160+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2024-05-28T19:07:36.160+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2024-05-28T19:07:36.174+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): transform_sales_orders_task> on 2024-05-28 19:07:34.242865+00:00
[2024-05-28T19:07:36.178+0000] {standard_task_runner.py:55} INFO - Started process 1410 to run task
[2024-05-28T19:07:36.181+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_extract', 'transform_sales_orders_task', 'manual__2024-05-28T19:07:34.242865+00:00', '--job-id', '66', '--raw', '--subdir', 'DAGS_FOLDER/dag_extract.py', '--cfg-path', '/tmp/tmpfrb9wkva']
[2024-05-28T19:07:36.182+0000] {standard_task_runner.py:83} INFO - Job 66: Subtask transform_sales_orders_task
[2024-05-28T19:07:36.237+0000] {task_command.py:376} INFO - Running <TaskInstance: dag_extract.transform_sales_orders_task manual__2024-05-28T19:07:34.242865+00:00 [running]> on host 9a04f700e4be
[2024-05-28T19:07:36.305+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=dag_extract
AIRFLOW_CTX_TASK_ID=transform_sales_orders_task
AIRFLOW_CTX_EXECUTION_DATE=2024-05-28T19:07:34.242865+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-05-28T19:07:34.242865+00:00
[2024-05-28T19:07:36.310+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/transform_sales_orders.py", line 48, in main
    order by date(date_order)"""
psycopg2.errors.SyntaxError: each UNION query must have the same number of columns
LINE 16:                     *,
                             ^

[2024-05-28T19:07:36.323+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=dag_extract, task_id=transform_sales_orders_task, execution_date=20240528T190734, start_date=20240528T190736, end_date=20240528T190736
[2024-05-28T19:07:36.333+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 66 for task transform_sales_orders_task (each UNION query must have the same number of columns
LINE 16:                     *,
                             ^
; 1410)
[2024-05-28T19:07:36.353+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2024-05-28T19:07:36.371+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
